# fan_controller

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.hpp  Fan.cpp  Fan.hpp  IFan.hpp  IThermometer.cpp  IThermometer.h  IThermometer.hpp  LcdDisplay.cpp  LcdDisplay.hpp  README.md  Termomether.cpp  Termomether.hpp  Thermometer.h  Thermometer.hpp  main.cpp  test.cpp
SlowThermometer/: README.md  SlowThermometer.cpp  SlowThermometer.hpp
tests/: ControllerTests.cpp  FanTests.cpp  MockThermometer.hpp  StubThermometer.cpp  StubThermometer.h  StubThermometer.hpp
